demo-hybrid-app/k8s/overlays/development/frontend-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"backend-dev","namespace":"hybrid-app-dev"}]'
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"
